--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="top_nav">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="Images/Logo.jpeg" alt="Academic Writting"
+      <a class="navbar-brand logo" href="index.html"><img src="Images/logo.jpeg" alt="Academic Writting"
           class="img-fluid" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -172,7 +172,7 @@
 
       </div>
       <div class="col-lg-5 instant-img d-none d-sm-block">
-        <img src="images/Arabi next one.avif" alt="Lookig For You" class="img-fluid">
+        <img src="images/arabi next one.avif" alt="Lookig For You" class="img-fluid">
       </div>
     </div>
 
