--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="top_nav">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="index.html"><img src="images/logo.jpeg" alt="Academic Writting"
+      <a class="navbar-brand logo" href="index.html"><img src="images/Logo.jpeg" alt="Academic Writting"
           class="img-fluid" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
