--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       </div>
       <div class="col-lg-5 instant-img d-none d-sm-block">
-        <img src="images/arabi next one.avif" alt="Lookig For You" class="img-fluid">
+        <img src="images/Arabi next one.avif" alt="Lookig For You" class="img-fluid">
       </div>
     </div>
 
@@ -183,7 +183,7 @@
 
       <div class="col-lg-5 ask-section-img ">
         <!-- <div class="col-lg-5 ask-section-img d-none d-sm-block"> -->
-        <img src="images/Arabic what do you need.jpg" alt="Lookig For You" class="img-fluid">
+        <img src="images/arabic what do you need.jpg" alt="Lookig For You" class="img-fluid">
       </div>
 
       <div class="col-lg-5 col-11">
