--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- Style Css -->
   <link rel="stylesheet" href="index.css" />
   <title>Academic Writting</title>
+  <link rel="shortcut icon" href="images/Logo.jpeg" type="image/x-icon">
 </head>
 
 <body>
